--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "docsify-demo",
-    "version": "2.0.1",
+    "version": "2.0.2",
     "description": "Plugin for Docsify that adds a preview of your component",
     "main": "dist/index.min.js",
     "scripts": {
         "build": "rollup -c",
         "dev": "rollup -c -w",
-        "serve": "docsify serve ./docs"
+        "serve": "docsify serve ./example"
     },
     "repository": {
         "type": "git",
